# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-12-25 15:48:29 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-134

    Summary:
      web, implement the "Last-Modified" header
    Revision:
      itools--main--0.12--patch-134


    modified files:
     Changelog cms/File.py web/headers.py


2005-12-25 15:25:06 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-133

    Summary:
      web, fix the format of the "Date" header in the response
    Revision:
      itools--main--0.12--patch-133


    modified files:
     Changelog web/response.py


2005-12-23 18:42:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-132

    Summary:
      web, implement HTTP-Date as of RFC 1945 (HTTP 1.0)
    Revision:
      itools--main--0.12--patch-132


    new files:
     web/.arch-ids/test_headers.py.id web/test_headers.py

    modified files:
     Changelog web/headers.py


2005-12-23 18:28:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-131

    Summary:
      catalog, fix typo in unit test
    Revision:
      itools--main--0.12--patch-131


    modified files:
     Changelog catalog/test_io.py


2005-12-20 17:01:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-130

    Summary:
      cms, fix external edit, changes were not persistent
    Revision:
      itools--main--0.12--patch-130

    It is a work-around implemented in "itools.web.server.handle_request".
    See the inline comment:
    
      XXX Since the lock and unlock operations don't modify any handler,
      they are not commited in the database, so we do here explicitly.

    modified files:
     Changelog web/server.py


2005-12-20 13:42:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-129

    Summary:
      cms, fix metadata serialization (workflow transitions)
    Revision:
      itools--main--0.12--patch-129


    modified files:
     Changelog cms/Metadata.py

